# CDFSampler

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in
include/: cdf1_sampler.h  cdf2_sampler.h  cdf_sampler.h  vec.h
src/: CMakeLists.txt  cdf1_sampler.cpp  cdf1_sampler.h  cdf2_sampler.cpp  cdf2_sampler.h  cdf_sampler.h  interpol.h  monotone_cubic_interpolator.cpp  monotone_cubic_interpolator.h  vec.h
test/: CDFSamplerTest.cpp  CDFSamplerTest.h  CMakeLists.txt  RectifiedSamplingTest.cpp  RectifiedSamplingTest.h  cdf_tester.cpp  cdf_tester.h  main.cpp  random_stuff.h  scoped_timer.h
